$Id$

History for IMDBPHP
===================

v1.1.4
-------------------
+ movie: added method mpaa_hist() to include multiple ratings per country (if set)
+ methods returning a data array now have the additional element "mon" holding
  the months number (while "month" still keeps the name as it was before)

v1.1.3 (26.03.2009)
-------------------
* updated ApiDoc: the methods for retrieving details now use the "see also" tag
  to show which IMDB page the information is taken from
+ movie: added method officialSites to retrieve the "official" URLs
! person: movies_archive() was broken due to site changes
! movie: releaseInfo() was messed up if one entry contained an incomplete date
! movie: director() returned nothing on series main page (thanx for the fix, moonface!)
+ movie: added method mainPictures() to retrieve information on the pictures
  displayed on the main page (thanx to moonface for the initial code!)

v1.1.2 (26.02.2009)
-------------------
+ movie: added methods to retrieve company credits (production companies,
  distributors, special effects, other companies)
+ movie: added method to retrieve the synopsis
+ movie: added method to retrieve detailed parental guide info

v1.1.1 (26.01.2009)
-------------------
! names::died() and names::born() did not return complete information
  (or even returned garbage in some cases) due to site changes
! names::spouse() and names::salary() returned garbage if the corresponding
  items were not available on the corresponding page
! trailer::getFlashCodeAllTrailers() was broken due to site changes on alltrailers.net
+ collecting more details from the filmografie - all the remarks in parenthesis
  are now collected into the $addons array

v1.1.0 (12.01.2009)
-------------------
+ added the imdb_topcharts and imdb_nowplaying classes provided by banzap
+ added imdb_trailers class (rewrite of code provided by banzap)
+ added showtimes images locally (since they are somehow protected at the IMDB site)